backend/hyrto-schema/force-app/main/default/objects/Hyrto_Addon__c/Hyrto_Addon__c.object-meta.xml
<CustomObject>
 <label>Hyrto Addon</label>
 <pluralLabel>Hyrto Addons</pluralLabel>
 <nameField>
  <label>Name</label>
  <type>Text</type>
 </nameField>
 <sharingModel>ReadWrite</sharingModel>
</CustomObject>