backend/hyrto-schema/force-app/main/default/objects/Hyrto_Addon__c/fields/Booking__c.field-meta.xml
<CustomField>
 <fullName>Booking__c</fullName><label>Booking</label><type>Lookup</type>
 <referenceTo>Hyrto_Booking__c</referenceTo>
 <relationshipLabel>Addons</relationshipLabel>
 <relationshipName>Addons</relationshipName>
</CustomField>