backend/hyrto-schema/force-app/main/default/objects/Hyrto_Addon__c/fields/Description__c.field-meta.xml
<CustomField>
 <fullName>Description__c</fullName><label>Description</label><type>TextArea</type>
</CustomField>