backend/hyrto-schema/force-app/main/default/objects/Hyrto_Addon__c/fields/ProductName__c.field-meta.xml
<CustomField>
 <fullName>ProductName__c</fullName><label>Product</label><type>Text</type><length>255</length>
</CustomField>