backend/hyrto-schema/force-app/main/default/objects/Hyrto_Addon__c/fields/Quantity__c.field-meta.xml
<CustomField>
 <fullName>Quantity__c</fullName><label>Quantity</label><type>Number</type>
 <precision>18</precision><scale>0</scale>
</CustomField>