backend/hyrto-schema/force-app/main/default/objects/Hyrto_Addon__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
 <fullName>UnitPrice__c</fullName><label>Unit Price</label><type>Currency</type>
 <precision>18</precision><scale>2</scale>
</CustomField>